2007-12-04  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c, server-src/dumper.c
	  server-src/planner.c: Don't crash is securoty driver is not found.

2007-12-04  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/changer.c: Print better message if the changer script
				has no output.

2007-12-03  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amserverconfig.8.xml: Fix indentation.

2007-11-30  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper-mem-port-source.c, server-src/taper-file-source.c
	  server-src/taper.c: Cast guint64 to uintmax_t and use %ju to print.

2007-11-30  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: Improve documentation.
	* example/amanda.conf.in: Ditto.

2007-11-30  Jean-Louis Martineau <martineau@zmanda.com>
       * server-src/server_util.c (cmdstr): Remove SPLIT-NEEDNEXT
                                            and SPLIT-CONTINUE
       * server-src/server_util.h (cmd_t): Remove SPLIT_NEEDNEXT
                                           and SPLIT_CONTINUE.
       * server-src/taper.c: Send part_kbyte in PARTDONE result.
       * server-src/amstatus.pl: Parse part_kbyte in PARTDONE result line.
                                 Parse REQUEST-NEW_TAPE line.
       * common-src/conffile.h: CONF_FLUSH_THRESHOLD_DUMPED,
			        CONF_FLUSH_THRESHOLD_SCHEDULE, CONF_TAPERFLUSH.
       * common-src/conffile.c: CNF_FLUSH_THRESHOLD_DUMPED,
                                CNF_FLUSH_THRESHOLD_SCHEDULE, CNF_TAPERFLUSH.
       * server-src/driverio.h: Add Many globals.
       * server-src/driver.c: Split runq in runq and directq.
                              Implement flush-threshold-*/taperflush.
       * example/amanda.conf.in: Example for flush-threshold-* and taperflush.
       * man/xml-source/amanda.conf.5.xml: Document flush-threshold-*
					   and taperflush.

2007-11-30  Jean-Louis Martineau <martineau@zmanda.com>