@@ -1,4 +1,7 @@
 2007-12-04  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amtape.c: Correctly output the result of taper scan.
+
+2007-12-04  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/amcheck.c, server-src/dumper.c
 	  server-src/planner.c: Don't crash is securoty driver is not found.
 
